--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,44 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-	name: mongo-deployment
-	labels:
-		app: mongo
+    name: mongo-deployment
+    labels:
+        app: mongo
 spec:
-	replicas: 1
-	selector:
-		matchLabels:
-			app: mongo
-	template:
-		metadata:
-			labels:
-				app: mongo
-		spec:
-			containers:
-			- name: mongodb
-				image: mongo:5.0
-				ports:
-				- containerPort: 27017
-				env:
-				- name: MONGO_INITDB_ROOT_USERNAME
-					valueFrom:
-						secretKeyRef:
-							name: mongo-secret
-							key: mongo-password  
-				- name: MONGO_INITDB_ROOT_PASSWORD
-					valueFrom:
-						secretKeyRef:
-							name: mongo-secret
-							key: mongo-password  
+    replicas: 1
+    selector:
+        matchLabels:
+            app: mongo
+    template:
+        metadata:
+            labels:
+                app: mongo
+        spec:
+            containers:
+            - name: mongodb
+              image: mongo:5.0
+              ports:
+              - containerPort: 27017
+              env:
+              - name: MONGO_INITDB_ROOT_USERNAME
+                valueFrom:
+                    secretKeyRef:
+                        name: mongo-secret
+                        key: mongo-username
+              - name: MONGO_INITDB_ROOT_PASSWORD
+                valueFrom:
+                    secretKeyRef:
+                        name: mongo-secret
+                        key: mongo-password
 ---
 apiVersion: v1
 kind: Service
 metadata:
-	name: mongo-service
+    name: mongo-service
 spec:
-	selector:
-		app: mongo
-	ports:
-		- protocol: TCP
-		port: 27017
-		targetPort: 27017
+    selector:
+        app: mongo
+    ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
