Miniflux now working with HTTPS

--- a/miniflux/04-ingress.yml
+++ b/miniflux/04-ingress.yml
@@ -7,12 +7,12 @@ metadata:
     app: miniflux
   annotations:
     # Traefik configuration
-    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     # Optional: Force HTTPS redirect
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
   - host: rss.bytechance.dev
