--- a/cert-manager/cluster-issuer.yml
+++ b/cert-manager/cluster-issuer.yml
@@ -1,5 +1,4 @@
 ---
-# Let's Encrypt Staging Issuer
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -11,12 +10,13 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
-    - http01:
-        ingress:
-          class: traefik
-
+    - dns01:
+        cloudflare:
+          email: contact@alexanderchance.me
+          apiTokenSecretRef:
+            name: cloudflare-api-token
+            key: api-token
 ---
-# Let's Encrypt Production Issuer
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -28,6 +28,9 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
-    - http01:
-        ingress:
-          class: traefik
+    - dns01:
+        cloudflare:
+          email: contact@alexanderchance.me
+          apiTokenSecretRef:
+            name: cloudflare-api-token
+            key: api-token
