--- a/longhorn/longhorn-ingress.yml
+++ b/longhorn/longhorn-ingress.yml
@@ -12,7 +12,7 @@ metadata:
     # traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-auth@kubernetescrd
 spec:
   rules:
-  - host: longhorn.achance.se
+  - host: longhorn.bytechance.dev
     http:
       paths:
       - path: /
@@ -24,5 +24,5 @@ spec:
               number: 80
   tls:
   - hosts:
-    - longhorn.achance.se
+    - longhorn.bytechance.dev
     secretName: longhorn-tls
