Fixed TLS issue

--- a/miniflux/03-app.yml
+++ b/miniflux/03-app.yml
@@ -71,6 +71,8 @@ spec:
           value: "20"
         - name: FETCH_YOUTUBE_WATCH_TIME
           value: "1"
+        - name: DISABLE_HTTP2
+          value: "1"
         livenessProbe:
           httpGet:
             path: /healthcheck
